conditions.Conditions.scala.error
Erreur de compilation :
Conditions:2: error: '(' expected but identifier found.
if buggle estFaceMur   {recule(1:Int)} else{avance(1:Int)} 
   ^Conditions:4: error: illegal start of simple expression
	}
        ^